--- a/cities.html
+++ b/cities.html
@@ -24,6 +24,7 @@
     <hr />
 
     <ol>
+      <li>Montreal(1.780.000)</li>
       <li>Jakarta (10.560.000)</li>
       <li>Shanghai (17,836,133)</li>
       <li>Istanbul (13,854,740)</li>
